# mujoco_warp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS  README.md  asv.conf.json  conftest.py  pyproject.toml
.agent/rules/: project.md
.github/workflows/: ci.yml
benchmark/: benchmark.py
benchmark/apptronik_apollo/: apptronik_apollo.xml
benchmark/cloth/: scene.xml
benchmark/humanoid/: humanoid.xml
benchmark/kitchen/: populate_scene.py
benchmarks/: README.md  config.txt  run.py  sweep.py
benchmarks/aloha/: __init__.py
benchmarks/cloth/: README.md  __init__.py  mannequin.xml
benchmarks/humanoid/: humanoid.xml
benchmarks/myosim/: README.md  __init__.py
benchmarks/render/: README.md  __init__.py  mug.xml
benchmarks/unitree_g1/: README.md  __init__.py
contrib/: README.md  apptronik_apollo_locomotion.ipynb  jax_unroll.py
contrib/kernel_analyzer/: .vscodeignore  README.md  kernel-analyzer-0.1.0.vsix  kernel-analyzer-0.2.0.vsix  kernel-analyzer-0.3.0.vsix  kernel-analyzer-0.7.0.vsix  package-lock.json  package.json
contrib/xml/: apptronik_apollo.xml  scene.xml
mujoco_warp/: __init__.py  record.py  testspeed.py  viewer.py
mujoco_warp/_src/: benchmark.py  block_cholesky.py  broad_phase_test.py  broadphase_test.py  cli.py  collision_box.py  collision_convex.py  collision_driver.py  collision_driver_test.py  collision_flex.py  collision_gjk.py  collision_gjk_legacy.py  collision_gjk_test.py  collision_hfield.py  collision_primitive.py  collision_primitive_core.py  collision_sdf.py  constraint.py  constraint_test.py  contact_force.py  derivative.py  derivative_test.py  forward.py  forward_test.py  history.py  (+34 more)
nightly/: aloha_cloth.jsonl  aloha_clutter.jsonl  aloha_pot.jsonl  aloha_sdf.jsonl  cloth.jsonl  cloth_render.jsonl  commit_range.json  franka_emika_panda.jsonl  humanoid.jsonl  index.html  mug.jsonl  myoarm.jsonl  primitives.jsonl  three_humanoids.jsonl  unitree_g1_flat.jsonl  unitree_g1_hfield.jsonl  unitree_g1_hfield_render.jsonl
(+30 files in other folders)
