[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="mujoco-warp"
version = "0.0.1"
# TODO(team): create a distribution list
authors = [
    {name = "Newton Developers", email = "mujoco@deepmind.com"},
]
description = "MuJoCo Warp (MJWarp)"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "absl-py",
    "etils[epath]",
    "mujoco",
    "numpy",
    "warp-lang",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "ruff",
]
# TODO(team): cpu and cuda JAX optional dependencies are temporary, remove after we land MJX:Warp
cpu = [
    "jax"
]
cuda = [
    "jax[cuda12]"
]

[project.scripts]
mjwarp-testspeed = "mujoco_warp.testspeed:main"
mjwarp-viewer = "mujoco_warp.viewer:main"

[project.urls]
Homepage = "https://github.com/google-deepmind/mujoco_warp"
Documentation = "https://mujoco.readthedocs.io"
Repository = "https://github.com/google-deepmind/mujoco_warp"
Changelog = "https://mujoco.readthedocs.io/en/stable/changelog.html"

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = [
    # isort
    "I",
]

[tool.ruff.lint.isort]
force-single-line = true
single-line-exclusions = ["typing"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mujoco_warp*"]